<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/app_bar_default_elevation">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextAppearance="@style/ToolBar.TitleText"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/padding_half">

            <nbsix.com.duskycvre.Design.keyEditText.KeyEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_edit_text_default"
                android:drawableLeft="@drawable/ic_person_outline_white_24dp"
                android:drawablePadding="@dimen/padding_half"
                android:hint="@string/username"
                android:textColorHint="@color/gray_dark"
                android:textColor="@color/gray_light"
                android:maxLines="1"
                android:padding="@dimen/padding_half"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="13sp"
                app:backgroundTint="@color/selector_focus"
                app:drawableLeftTint="@color/selector_focus" />

            <nbsix.com.duskycvre.Design.keyEditText.KeyEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_edit_text_default"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="@dimen/padding_half"
                android:hint="@string/password"
                android:textColorHint="@color/gray_dark"
                android:textColor="@color/gray_light"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/padding_half"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="13sp"
                app:backgroundTint="@color/selector_focus"
                app:drawableLeftTint="@color/selector_focus" />

            <com.bilibili.magicasakura.widgets.TintButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/selector_login"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/login_"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_large" />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawablePadding="@dimen/padding_half"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:padding="@dimen/padding_half"
                android:text="@string/login_error"
                android:textColor="@color/selector_text"
                android:textSize="@dimen/textsize12sp" />

            <TextView
                android:id="@+id/user_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawablePadding="@dimen/padding_half"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/padding_half"
                android:text="@string/register_"
                android:textColor="@color/selector_text"
                android:textSize="@dimen/textsize12sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
