<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/app_bar_default_elevation">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextAppearance="@style/ToolBar.TitleText"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_margin16">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/UsernameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="@color/gray_20"
                    >

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size36dp"
                        android:textColor="@color/white_30"
                        android:background="@null"/>

                </android.support.design.widget.TextInputLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <include layout="@layout/line_h"/>
                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/PasswordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_margin6"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray_20">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size36dp"
                        android:inputType="textPassword"
                        android:textColor="@color/white_30"
                        android:background="@null"/>

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <include layout="@layout/line_h"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/common_margin16"
                    android:weightSum="2">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/common_margin6"
                        android:padding="@dimen/padding8dp"
                        android:background="@drawable/btn_theme_bg"
                        android:gravity="center"
                        android:text="@string/register_"
                        android:textColor="@color/focus_text_color"
                         />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/common_margin6"
                        android:padding="@dimen/padding8dp"
                        android:background="@drawable/btn_theme_solid_bg"
                        android:gravity="center"
                        android:text="@string/login_"
                        android:textColor="@color/white"
                      />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
