<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/alpha_background_dark"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="@dimen/user_name_min_width"
                    android:text="@string/app_name"
                    android:textColor="@color/gray_20"
                    android:gravity="center"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_alignParentEnd="true">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/view"
                            android:textColor="@color/gray_20"
                            android:textSize="@dimen/textsize10sp"
                            android:gravity="center"/>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/padding4dp">
                            <include layout="@layout/line_v"/>
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/comments"
                            android:textColor="@color/gray_20"
                            android:textSize="@dimen/textsize10sp"
                            android:gravity="center"/>
                    </LinearLayout>


                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size24dp"
                android:orientation="horizontal">

                <include layout="@layout/layout_user_tag_view"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <nbsix.com.duskycvre.Design.tagView.TagView
                        android:id="@+id/container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        />
                </RelativeLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size100dp"
                android:layout_marginTop="@dimen/padding4dp"
                android:layout_marginBottom="@dimen/padding4dp"
                 />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize12sp"
                android:textColor="@color/gray_20"
                android:maxLines="3"
                android:ellipsize="end"/>
        </LinearLayout>
        </android.support.v7.widget.CardView>
</LinearLayout>
